# chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  langgraph.json  pyproject.toml  test.txt  test_agentic_ai.ipynb
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
data/: zalando_cleaned.docx  zalando_faq.docx
docs/arch/: aiworkflow.drawio  chatbotrag.drawio  presentation.drawio
src/chatbot/agents/: models.py
src/chatbot/graphs/: graph.py
src/chatbot/prompts/: prompts.py
src/chatbot/rag/data_loader/: data_loader.py
src/chatbot/rag/retrievers/: retriever.py
src/chatbot/rag/stores/: embeddings.py
