[project]
name = "chatbot"
version = "0.1.0"
description = "A short project description"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi",
  "langchain-openai>=1.1.7",
  "python-dotenv>=1.2.1",
  "uvicorn[standard]",
  "jupyterlab",
  "rich>=14.3.2",
  "langchain-community>=0.4.1",
  "pypdf>=6.7.1",
  "langchain-text-splitters>=1.1.0",
  "langchain-core>=1.2.13",
  "langchain[openai]>=1.2.10",
  "langgraph-cli[inmem]>=0.4.12",
  "markdownify>=1.2.2",
  "nemoguardrails[openai]>=0.20.0",
  "langgraph>=1.0.9",
  "pydantic>=2.12.5",
  "playwright>=1.58.0",
  "python-docx>=1.2.0",
  "docx2txt>=0.9",
]

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "double"
